--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "BABEL_ENV=test ava",
-    "build": "BABEL_ENV=build rollup -c"
+    "test": "BABEL_ENV=test nyc ava",
+    "build": "BABEL_ENV=build rollup -c",
+    "coverage": "nyc report --reporter=lcov --reporter=text-lcov --reporter=html"
   },
   "ava": {
     "files": [
@@ -29,6 +30,8 @@
     "@babel/register": "^7.14.5",
     "@rollup/plugin-babel": "^5.3.0",
     "ava": "^3.15.0",
-    "rollup": "^2.56.0"
+    "nyc": "^15.1.0",
+    "rollup": "^2.56.0",
+    "tap-xunit": "^2.4.1"
   }
 }
